--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Leandro Portfolio Webpage</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
 <!-- Links to set the font and icons from font awesone -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" />
@@ -102,3 +111,5 @@
       <i class="fas fa-at"></i> Send an email</a>
   </div>
 </section>
+</body>
+</html>
