Correct CSS link
Corrected CSS link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Leandro Portfolio Webpage</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet"  type="text/css" href="https://shyllenno.github.io/style.css">
 
 </head>
 <body>
